--- a/src/services/services.css
+++ b/src/services/services.css
@@ -1,9 +1,9 @@
 .service__item{
     padding: 20px;
-    background: var(--card-bg-01);
+    
     display: flex;
     align-items: center;
-    column-gap: 0.5rem;
+    column-gap: 0.7rem;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -21,4 +21,10 @@
     color: var(--primary-color);
     font-size: 1.1rem;
     font-weight: 600;
+}
+
+.service__item p{
+    font-size: 0.9rem;
+    margin-top: 5px;
+    color: #222;
 }
